--- a/notebooks/00_data_engineering.ipynb
+++ b/notebooks/00_data_engineering.ipynb
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "house-price-predictor (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
